--- a/src/css/main.css
+++ b/src/css/main.css
@@ -307,4 +307,19 @@ template {
   display: none;
 }
 
+html,
+body {
+  font-size: 16px;
+}
+
+.header {
+  box-shadow: 0 0.9375rem 2rem -0.25rem rgb(66, 68, 90);
+}
+.header__inner {
+  width: 100%;
+  max-width: 60rem;
+  max-width-margin-inline: auto;
+  max-width-padding-inline: 0.9375rem;
+}
+
 /*# sourceMappingURL=main.css.map */
