--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,13 @@
 @import "../../node_modules/normalize.css/normalize";
+
+@import "./components/navigation";
+
+//global
+
+@import "./global";
+
+// layout
+@import "./layout/header";
+
+//components
+@import "./components/logo";
