--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -3,11 +3,12 @@
 .header {
   box-shadow: 0 px-to-rem(15px) px-to-rem(32px) px-to-rem(-4px)
     rgba(66, 68, 90, 1);
+
   &__inner {
     width: 100%;
-    max-width: px-to-rem(960px) {
-      margin-inline: auto;
-      padding-inline: px-to-rem(15px);
-    }
+    max-width: px-to-rem(960px);
+    margin-inline: auto;
+    padding-inline: px-to-rem(15px);
+    box-sizing: border-box;
   }
 }
