--- a/src/css/main.css
+++ b/src/css/main.css
@@ -307,11 +307,59 @@ template {
   display: none;
 }
 
+.navigation {
+  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: nowrap;
+}
+.navigation__item {
+  font-family: "Roboto Light", sans-serif;
+  padding: 1.25rem 0.625rem;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: darkgray;
+  transition: all 200ms ease-in-out;
+}
+.navigation__item:first-child {
+  border-top-left-radius: 0.25rem;
+}
+.navigation__item:last-child {
+  border-top-right-radius: 0.25rem;
+}
+.navigation__item:link {
+  border-bottom: 0.125rem solid rosybrown;
+}
+.navigation__item:visited {
+  border-bottom: 0.125rem solid rosybrown;
+}
+.navigation__item:hover, .navigation__item--current {
+  border-bottom: 0.125rem solid rosybrown;
+  color: white;
+  background-color: darkgray;
+}
+.navigation__item:active {
+  border-bottom: 0.125rem solid rosybrown;
+}
 html,
 body {
   font-size: 16px;
 }
 
+@font-face {
+  font-family: "Roboto Bold";
+  src: url("../fonts/roboto-bold-webfont.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto Light";
+  src: url("../fonts/roboto-light-webfont.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 .header {
   box-shadow: 0 0.9375rem 2rem -0.25rem rgb(66, 68, 90);
 }
@@ -321,6 +369,10 @@ body {
   margin-inline: auto;
   padding-inline: 0.9375rem;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: nowrap;
 }
 
 .logo {
