--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,4 +1,5 @@
 @import "../utils/functions";
+@import "../utils/mixins.scss";
 
 .header {
   box-shadow: 0 px-to-rem(15px) px-to-rem(32px) px-to-rem(-4px)
@@ -10,5 +11,6 @@
     margin-inline: auto;
     padding-inline: px-to-rem(15px);
     box-sizing: border-box;
+    @include flex(space-between, center);
   }
 }
