ccs custom fonts using sass maps loop mixin

--- a/src/scss/utils/mixins.scss
+++ b/src/scss/utils/mixins.scss
@@ -25,3 +25,12 @@
     @content;
   }
 }
+
+@mixin font-face($font-name, $font-file) {
+  @font-face {
+    font-family: $font-file;
+    src: url("#{$font-path}/#{$font-file}.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+}
