--- a/src/css/main.css
+++ b/src/css/main.css
@@ -349,14 +349,14 @@ body {
 }
 
 @font-face {
-  font-family: "Roboto Bold";
-  src: url("../fonts/roboto-bold-webfont.woff2") format("woff2");
+  font-family: -roboto-bold-webfont;
+  src: url("../fonts/-roboto-bold-webfont.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: "Roboto Light";
-  src: url("../fonts/roboto-light-webfont.woff2") format("woff2");
+  font-family: -roboto-light-webfont;
+  src: url("../fonts/-roboto-light-webfont.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
