--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,10 @@
 $base-font-size: 16px;
 
 $img-path: "../img/";
+
+$font-path: "../fonts";
+
+$fonts: (
+  roboto-bold-webfont: "Roboto Bold",
+  roboto-light-webfont: "Roboto Light",
+);
