--- a/src/css/main.css
+++ b/src/css/main.css
@@ -314,6 +314,11 @@ template {
   align-items: flex-start;
   flex-direction: nowrap;
 }
+@media screen and (max-width: pm-to-rem(720px)) {
+  .navigation {
+    display: none;
+  }
+}
 .navigation__item {
   font-family: "Roboto Light", sans-serif;
   padding: 1.25rem 0.625rem;
@@ -360,6 +365,13 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+@media screen and (min-width: 1200px) {
+  .test {
+    color: red;
+    font-size: 16px;
+  }
+}
+
 .header {
   box-shadow: 0 0.9375rem 2rem -0.25rem rgb(66, 68, 90);
 }
@@ -373,6 +385,7 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-direction: nowrap;
+  position: relative;
 }
 
 .logo {
@@ -385,6 +398,61 @@ body {
   margin-bottom: 0.625rem;
   overflow: hidden;
   text-indent: -999px;
+}
+
+.hamburger {
+  width: 3.125rem;
+  height: 3.125rem;
+  cursor: pointer;
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  right: 0.9375rem;
+  z-index: 42;
+}
+@media screen and (min-width: 45rem) {
+  .hamburger {
+    display: none;
+  }
+}
+.hamburger__icon {
+  width: 100%;
+  height: 0.0625rem;
+  background-color: black;
+  display: inline-block;
+  transition: all 200ms ease-in-out;
+  position: absolute;
+}
+.hamburger__icon:first-child {
+  top: 0;
+}
+.hamburger__icon:nth-child(2) {
+  top: 50%;
+}
+.hamburger__icon:last-child {
+  bottom: 0;
+}
+.hamburger .hamburger__select {
+  width: 3.125rem;
+  height: 3.125rem;
+  position: absolute;
+  right: 0.9375rem;
+  z-index: 213;
+  opacity: 0;
+  cursor: pointer;
+}
+.hamburger .hamburger__select:checked + .hamburger .hamburger__icon.hamburger__icon:first-child {
+  transform: rotate(45deg);
+  transform-origin: top left;
+  width: 4.375rem;
+}
+.hamburger .hamburger__select:checked + .hamburger .hamburger__icon.hamburger__icon:nth-child(2) {
+  transform: translateX(-100%);
+}
+.hamburger .hamburger__select:checked + .hamburger .hamburger__icon.hamburger__icon:last-child {
+  transform: rotate(-45deg);
+  transform-origin: bottom left;
+  width: 4.375rem;
 }
 
 /*# sourceMappingURL=main.css.map */
