--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,9 +6,11 @@
 
 @import "./global";
 @import "./typography/fonts";
-
+@import "./media_queries";
 // layout
 @import "./layout/header";
 
 //components
 @import "./components/logo";
+
+@import "./components/hamburger";
